--- a/mysite/todos/templates/todos/end.html
+++ b/mysite/todos/templates/todos/end.html
@@ -1,1 +1,12 @@
-受け取りました
+<html lang="ja">
+
+<head>
+    <meta charset="utf-8">
+    <title>TODOリスト</title>
+</head>
+
+<body>
+    <p>Todoを追加しました！</p>
+
+    <a href="{% url 'todos:index' %}">◁ホームへ戻る</a>
+</body>
