primary added to create.html

--- a/mysite/todos/templates/todos/create.html
+++ b/mysite/todos/templates/todos/create.html
@@ -13,14 +13,14 @@
         <p>詳細：</p>
         <p><textarea name="detail" cols="50" rows="4" maxlength="200" placeholder="200字以内で入力"></textarea></p>
         <p>締め切り：<input type="datetime-local" name="deadline" size="50" required></p>
-        <!--優先度：
-            <select name="priolity" id="priolity" size="5">
-                <option value="5">5</option>
-                <option value="4">4</option>
-                <option value="3">3</option>
-                <option value="2">2</option>
-                <option value="1" selected>1</option>
-            </select> -->
+        優先度：
+        <select name="priolity" id="priolity" size="5">
+            <option value="5">5</option>
+            <option value="4">4</option>
+            <option value="3">3</option>
+            <option value="2">2</option>
+            <option value="1" selected>1</option>
+        </select>
         <p><button type="submit" value="追加">追加</button></p>
 
     </fieldset>
