deadline all in index.html

--- a/mysite/todos/templates/todos/index.html
+++ b/mysite/todos/templates/todos/index.html
@@ -14,7 +14,7 @@
                 締め切りが近いTodoリスト</a>
         </p>
 
-        <h2>締め切りが近いTodoリスト</h2>
+        <h2>⚠ 締め切りが近いTodoリスト</h2>
 
         {% if latest_todo_list %}
         <ul>
