--- a/mysite/todos/templates/todos/delete.html
+++ b/mysite/todos/templates/todos/delete.html
@@ -1,4 +1,17 @@
-削除しました！
-Todo完了ご苦労様です！
+<!DOCTYPE html>
+<html lang="ja">
 
-<p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+<head>
+    <meta charset="utf-8">
+    <title>Todoの完了・削除</title>
+</head>
+
+<body>
+    <h1>Todo完了・削除画面</h1>
+    <p>削除しました！
+        Todo完了ご苦労様です！</p>
+
+    <p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+</body>
+
+</html>
