--- a/mysite/todos/templates/todos/detail.html
+++ b/mysite/todos/templates/todos/detail.html
@@ -1,14 +1,39 @@
-<h1>TODOリスト</h1>
-<div>
+<!--Todoの詳細を表示-->
 
-    <h1>{{ todo.name }}</h1>
-    <h2>詳細</h2>
+<!DOCTYPE html>
+<html lang="ja">
 
-    <h3>{{ todo.detail }}</h3>
-    <p></p>
-    <h2>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</h2>
-    <h2>優先度：{{ todo.priolity }}</h2>
+<head>
+    <meta charset="utf-8">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'todos/style.css' %}">
 
-</div>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+    <title>TODOの詳細</title>
+</head>
+
+<body>
+    <h1 class="title">TODOリスト</h1>
+    <div>
+        <h2>TODOの詳細</h2>
+
+        <div>
+
+            <h1>{{ todo.name }}</h1>
+            <h2>内容・詳細:</h2>
+
+            <h3>{{ todo.detail }}</h3>
+            <p></p>
+            <h2>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</h2>
+            <h2>優先度：{{ todo.priolity }}</h2>
+
+        </div>
+
+        <p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+    </div>
+</body>
+
+</html>
