'sakuzyo red-clor' and 'detail.html added css part1'

--- a/mysite/todos/static/todos/style.css
+++ b/mysite/todos/static/todos/style.css
@@ -3,18 +3,27 @@ body {
 }
 
 .title {
-    position: relative;
+    margin: 20px 10px 20px 10px;
     padding: 1rem 2rem;
     border-radius: 10px;
     background-image: linear-gradient(left, rgba(250, 140, 160, 0.5) 0%, rgba(255, 200, 70, 0.8) 100%);
     background-image: linear-gradient(to right, rgba(250, 140, 160, 0.5) 0%, rgba(255, 200, 70, 0.8) 100%);
 }
 
+.breadcrumb {
+    margin: 10px 10px 10px 10px;
+}
+
 div {
-    margin: 10px 0px 10px 30px
-        /*上右下左*/
+    margin: 30px 0px 30px 30px;
+    /*上右下左*/
 }
 
 .nearest {
     font-size: 20px;
+}
+
+
+h4 {
+    width: 400px;
 }
