--- a/mysite/todos/templates/todos/detail.html
+++ b/mysite/todos/templates/todos/detail.html
@@ -22,17 +22,16 @@
 
         <div>
 
-            <h1>{{ todo.name }}</h1>
-            <h2>内容・詳細:</h2>
+            <h2>{{ todo.name }}</h2>
 
-            <h3>{{ todo.detail }}</h3>
-            <p></p>
-            <h2>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</h2>
-            <h2>優先度：{{ todo.priolity }}</h2>
 
+            <h4>内容・詳細：{{ todo.detail }}</h4>
+
+            <h4>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</h4>
+            <h4>優先度：{{ todo.priolity }}</h4>
         </div>
 
-        <p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+        <p><a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
     </div>
 </body>
 
