--- a/mysite/todos/static/todos/style.css
+++ b/mysite/todos/static/todos/style.css
@@ -8,10 +8,20 @@ body {
     border-radius: 10px;
     background-image: linear-gradient(left, rgba(250, 140, 160, 0.5) 0%, rgba(255, 200, 70, 0.8) 100%);
     background-image: linear-gradient(to right, rgba(250, 140, 160, 0.5) 0%, rgba(255, 200, 70, 0.8) 100%);
+    font-family: cursive;
+}
+
+a:link {
+    color: blue;
+}
+
+a:hover {
+    color: darkmagenta;
 }
 
 .breadcrumb {
     margin: 10px 10px 10px 10px;
+    background-color: rgb(246, 193, 193);
 }
 
 div {
