--- a/mysite/todos/templates/todos/create.html
+++ b/mysite/todos/templates/todos/create.html
@@ -26,18 +26,18 @@
         <div>
             <h2>やるべきことを追加しよう(^▽^)/</h2>
             <p>※「やるべきこと」と「締め切り」は必ず入力してください😎</p>
-            <form action="{% url 'todos:create_conf' %}" method="post">
+            <form action="{% url 'todos:create_alert' %}" method="post">
                 {% csrf_token %}
 
                 <fieldset class="create_form">
                     <p>やるべきこと：<input type="text" name='name' size="50" maxlength="50" placeholder="50字以内で入力" required>
-                        <font color="red">(※必ず入力してください)</font>
+                        <font color="red">(※必須)</font>
                     </p>
                     <p>内容・詳細：</p>
                     <p><textarea name="detail" cols="50" rows="4" maxlength="200" placeholder="200字以内で入力"></textarea>
                     </p>
                     <p>締め切り：<input type="datetime-local" name="deadline" size="50" required>
-                        <font color="red">(※必ず入力してください)</font>
+                        <font color="red">(※必須 日時は今以降のものにしてください)</font>
                     </p>
                     優先度：
                     <select name="priolity" id="priolity" size="1">
@@ -47,6 +47,7 @@
                         <option value="2">2</option>
                         <option value="1" selected>1</option>
                     </select>
+
                     <p><button type="submit" value="追加">追加</button></p>
 
                 </fieldset>
