--- a/mysite/todos/templates/todos/create_conf.html
+++ b/mysite/todos/templates/todos/create_conf.html
@@ -10,5 +10,5 @@
     <h1>Todo作成完了</h1>
     <p>Todoを作成し、リストに追加しました！</p>
 
-    <a href="{% url 'todos:index' %}">◁ホームへ戻る</a>
+    <a href="{% url 'todos:index' %}">◁ホームへ</a>
 </body>
