--- a/mysite/todos/templates/todos/delete.html
+++ b/mysite/todos/templates/todos/delete.html
@@ -11,7 +11,7 @@
     <p>削除しました！
         Todo完了ご苦労様です！</p>
 
-    <p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+    <p> <a href="{% url 'todos:index' %}">◁ ホームへ</a> </p>
 </body>
 
 </html>
