--- a/mysite/todos/templates/todos/delete_alert.html
+++ b/mysite/todos/templates/todos/delete_alert.html
@@ -26,7 +26,7 @@
         </fieldset>
     </div>
 
-    <p> <a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+    <p> <a href="{% url 'todos:index' %}">◁ ホームへ</a> </p>
 </body>
 
 </html>
