--- a/mysite/todos/templates/todos/create.html
+++ b/mysite/todos/templates/todos/create.html
@@ -53,7 +53,7 @@
                 </fieldset>
             </form>
         </div>
-        <p><a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+        <p><a href="{% url 'todos:index' %}">◁ ホームへ移動</a> </p>
     </div>
 </body>
 
