--- a/mysite/todos/templates/todos/detail.html
+++ b/mysite/todos/templates/todos/detail.html
@@ -37,7 +37,7 @@
             <h4>優先度：{{ todo.priolity }}</h4>
         </div>
 
-        <p><a href="{% url 'todos:index' %}">◁ ホームに戻る</a> </p>
+        <p><a href="{% url 'todos:index' %}">◁ ホームへ</a> </p>
     </div>
 </body>
 
