--- a/mysite/todos/templates/todos/create_conf.html
+++ b/mysite/todos/templates/todos/create_conf.html
@@ -34,7 +34,7 @@
                     <a href="{% url 'todos:create' %}">◁Todo作成画面へ移動</a>
                 </td>
                 <td>&nbsp;</td>
-                <td><img class="image" src="{% static 'todos/images/rabbit2.png' %}" alt="取り掛かりましょう！" width="300">
+                <td><img class="image" src="{% static 'todos/images/rabbit.png' %}" alt="取り掛かりましょう！" width="300">
                 </td>
             </tr>
         </table>
