--- a/mysite/todos/templates/todos/create.html
+++ b/mysite/todos/templates/todos/create.html
@@ -1,4 +1,4 @@
-<!--Todoをリストに作成するフォーム-->
+<!--Todoの作成フォーム画面-->
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -19,10 +19,10 @@
     <ul class="breadcrumb">
         Menu：
         <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
-        <li><a href="{% url 'todos:create'%}"> ▷ Todoを追加する😉</a></li>
+        <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
     </ul>
     <div>
-        <h1>Todo作成画面</h1>
+        <h1 class="menu">😉Todo作成</h1>
         <div>
             <h2>やるべきことを追加しよう(^▽^)/</h2>
             <p>※「やるべきこと」と「締め切り」は必ず入力してください😎</p>
