--- a/mysite/todos/templates/todos/create_conf.html
+++ b/mysite/todos/templates/todos/create_conf.html
@@ -1,3 +1,5 @@
+<!--Todoの作成完了画面-->
+
 <!DOCTYPE html>
 <html lang="ja">
 
@@ -17,16 +19,16 @@
     <ul class="breadcrumb">
         Menu：
         <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
-        <li><a href="{% url 'todos:create'%}"> ▷ Todoを追加する😉</a></li>
+        <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
     </ul>
     <div>
-        <h1>Todo作成完了</h1>
+        <h1 class="menu">🌞Todo作成完了</h1>
 
         <table>
             <tr>
                 <td>
                     <div>
-                        <h2>Todoを作成し、リストに追加しました！<br>早速、<font color="red">Todo</font>に取り掛かりましょう！！</h2>
+                        <p class="attention">Todoを作成し、リストに追加しました！<br>早速、<font color="red">Todo</font>に取り掛かりましょう！！</p>
                         <br><br>
                     </div>
                     <a href="{% url 'todos:index' %}">◁ホームへ移動</a>
@@ -38,6 +40,7 @@
                 </td>
             </tr>
         </table>
-
+        <p><a href="{% url 'todos:index' %}">◁ ホームへ移動</a> </p>
+        <a href="{% url 'todos:create' %}">◁ Todo作成画面へ移動</a>
     </div>
 </body>
