--- a/mysite/todos/templates/todos/delete_alert.html
+++ b/mysite/todos/templates/todos/delete_alert.html
@@ -1,32 +1,47 @@
 <!--Todoの削除確認画面-->
 
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
     <meta charset="utf-8">
+    {% load static %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'todos/style.css' %}">
     <title>Todo削除の確認</title>
 </head>
 
 <body>
-    <h1>Todo削除の確認</h1>
-    <p>一度消去しますと復旧ができません。Todoを削除しますか？</p>
-
+    <h1 class="title">TODOリスト</h1>
+    <ul class="breadcrumb">
+        Menu：
+        <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
+        <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
+    </ul>
     <div>
-        <h3>削除するTodo</h3>
-        <fieldset>
-            <p>やるべきこと：{{ todo.name }}</p>
-            <p>内容・詳細：{{ todo.detail }}</p>
-            <p>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</p>
-            <p>優先度：{{ todo.priolity }}</p>
-            <form action="{% url 'todos:delete' todo.id %}" method="post">
-                {% csrf_token %}
-                <input type="submit" value="完了/削除">
-            </form>
-        </fieldset>
-    </div>
+        <h1 class="menu">⚡Todo削除確認</h1>
+        <div>
+            <p>一度消去しますと復旧ができません。Todoを削除しますか？</p>
 
-    <p> <a href="{% url 'todos:index' %}">◁ ホームへ</a> </p>
+
+            <fieldset>
+                <h3>削除するTodo</h3>
+                <p>やるべきこと：{{ todo.name }}</p>
+                <p>内容・詳細：{{ todo.detail }}</p>
+                <p>締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</p>
+                <p>優先度：{{ todo.priolity }}</p>
+                <form action="{% url 'todos:delete' todo.id %}" method="post">
+                    {% csrf_token %}
+                    <input type="submit" value="削除">
+                </form>
+            </fieldset>
+        </div>
+
+        <p> <a href="{% url 'todos:index' %}">◁ ホームへ移動</a> </p>
+    </div>
 </body>
 
 </html>
