added class todo for delete_alert and detail and css

--- a/mysite/todos/templates/todos/create.html
+++ b/mysite/todos/templates/todos/create.html
@@ -33,7 +33,7 @@
                     <p>やるべきこと：<input type="text" name='name' size="50" maxlength="50" placeholder="50字以内で入力" required>
                         <font color="red">(※必須)</font>
                     </p>
-                    <p>内容・詳細：</p>
+                    <p class="todo">内容・詳細：</p>
                     <p><textarea name="detail" cols="50" rows="4" maxlength="200" placeholder="200字以内で入力"></textarea>
                     </p>
                     <p>締め切り：<input type="datetime-local" name="deadline" size="50" required>
