--- a/mysite/todos/static/todos/style.css
+++ b/mysite/todos/static/todos/style.css
@@ -39,5 +39,12 @@ div {
 
 .sentence {
     font-size: large;
+}
+
+.todo {
     width: 400px;
+}
+
+.todo_detail {
+    margin: 30px 0px 30px 30px;
 }
