--- a/mysite/todos/templates/todos/detail.html
+++ b/mysite/todos/templates/todos/detail.html
@@ -27,12 +27,12 @@
         <h1 class="menu">📝TODO詳細</h1>
         <div>
 
-            <h2>{{ todo.name }}</h2>
+            <h2 class="todo">{{ todo.name }}</h2>
 
             {% if todo.detail == '' %}
             <p class="sentence">内容・詳細：特になし</p>>
             {% else %}
-            <p class="sentence">内容・詳細：{{ todo.detail }}</p>
+            <p class="sentence todo">内容・詳細：{{ todo.detail }}</p>
             {% endif %}
             <p class="sentence">締め切り：{{ todo.deadline | date:'Y/m/d H:i' }}</p>
             <p class="sentence">優先度：{{ todo.priolity }}</p>
