--- a/mysite/todos/templates/todos/index.html
+++ b/mysite/todos/templates/todos/index.html
@@ -45,7 +45,7 @@
                     {% endfor %}
                 </ul>
                 {% else %}
-                <p> No todos! Let's create todos:) </p>
+                <p class="attention"> 作成されたTodoがありません。<br>新しいTodoを作成しましょう！ </p>
                 {% endif %}
             </div>
         </div>
