--- a/mysite/todos/templates/todos/delete_alert.html
+++ b/mysite/todos/templates/todos/delete_alert.html
@@ -20,6 +20,7 @@
         Menu：
         <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
         <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
+        <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
     <div>
         <h1 class="menu">⚡Todo削除確認</h1>
