--- a/mysite/todos/static/todos/style.css
+++ b/mysite/todos/static/todos/style.css
@@ -43,19 +43,25 @@ div {
 }
 
 .todo {
-    width: 400px;
+    width: 50%;
 }
 
 .todo_detail {
     margin: 30px 0px 30px 30px;
 }
 
-.priolity {
+.priolity_list {
     border-collapse: separate;
     border-spacing: 5px 10px;
+
 }
 
 th {
-    font-size: 15px;
-    height: 15px;
+    font-size: 13px;
+    height: 12px;
+    text-align: center;
+}
+
+.number {
+    font-size: 30px;
 }
