--- a/mysite/todos/templates/todos/delete.html
+++ b/mysite/todos/templates/todos/delete.html
@@ -19,6 +19,7 @@
         Menu：
         <li><a href="{% url 'todos:index'%}">▷ ホーム🏡</a></li>
         <li><a href="{% url 'todos:create'%}"> ▷ Todoを作成する😉</a></li>
+        <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
     <div>
         <h1 class="menu">✅Todo削除完了</h1>
