--- a/mysite/todos/templates/todos/priolity_list.html
+++ b/mysite/todos/templates/todos/priolity_list.html
@@ -25,7 +25,7 @@
         <li><a href="{% url 'todos:priolity'%}"> ▷ 優先度順リスト👑</a></li>
     </ul>
     <div>
-        <h1 class="menu">優先度順 Todoリスト</h1>
+        <h1 class="menu">👑優先度順 Todoリスト</h1>
         <div>
             <h2>優先度が高いTodoを確認しよう！</h2>
             <div>
@@ -34,7 +34,7 @@
                 <p class="attention"> 作成されたTodoがありません。<br>新しいTodoを作成しましょう！ </p>
                 {% else %}
                 <ul>
-                    <table class="priolity">
+                    <table class="priolity_list">
                         <tr>
                             <th></th>
                             <th>優先度</th>
@@ -53,15 +53,15 @@
                                 </form>
                             </td>
                             {% if todo.priolity == 5 %}
-                            <td align="center" bgcolor="red">{{ todo.priolity }}</td>
+                            <td align="center" bgcolor="tomato" class="number">{{ todo.priolity }}</td>
                             {% elif todo.priolity == 4 %}
-                            <td align="center" bgcolor="orange">{{ todo.priolity }}</td>
+                            <td align="center" bgcolor="orange" class="number">{{ todo.priolity }}</td>
                             {% elif todo.priolity == 3 %}
-                            <td align="center" bgcolor="yellow">{{ todo.priolity }}</td>
+                            <td align="center" bgcolor="yellow" class="number">{{ todo.priolity }}</td>
                             {% elif todo.priolity == 2 %}
-                            <td align="center" bgcolor="chartreuse">{{ todo.priolity }}</td>
+                            <td align="center" bgcolor="chartreuse" class="number">{{ todo.priolity }}</td>
                             {% else %}
-                            <td align="center" bgcolor="cyan">{{ todo.priolity }}</td>
+                            <td align="center" bgcolor="cyan" class="number">{{ todo.priolity }}</td>
                             {% endif %}
                         </tr>
                         {% endfor %}
